// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.usage-errors.acceptance given: [case1] route.guard.budget with a non-numeric --add when: [t0] --add is not a positive integer then: stderr matches snapshot: budget --add non-numeric 1`] = `
"error: --add must be a positive integer
"
`;

exports[`driver.route.usage-errors.acceptance given: [case2] route.mutate grant with an invalid action when: [t0] the grant action is not allow|block|get then: stderr matches snapshot: mutate grant invalid-action 1`] = `
"
route.mutate grant - manage route protection privilege

usage:
  rhx route.mutate grant allow   # grant privilege (human only — refused without a tty)
  rhx route.mutate grant block   # revoke privilege
  rhx route.mutate grant get     # check privilege state

options:
  --route <path>    route path (default: auto-detect from branch)
  --help            show this help message

.note = the flag \`allow\` writes lifts EVERY protected write on the route at once — a guard's
        \`budget:\` line among them. so it is human only, and that is enforced rather than asked.

"
`;

exports[`driver.route.usage-errors.acceptance given: [case3] route.guard.budget with an absent --add when: [t0] the required --add flag is omitted then: stderr matches snapshot: budget --add absent 1`] = `
"error: --add is required

route.guard.budget - extend peer reviewer budget

usage:
  rhx route.guard.budget --for review --add 2 --stone 1.vision              # extend the LATEST level
  rhx route.guard.budget --for review --add 2 --peer primo --stone 1.vision # extend one reviewer
  rhx route.guard.budget --for review --add 2 --level 1 --stone 1.vision    # extend one named level
  rhx route.guard.budget --for review --add 2 --stone 1.vision --route .behavior/my-feature

options:
  --for     resource type: "review" (required)
  --add     number of budget rounds to add (required)
  --stone   stone name with guard to update (required) — must name exactly ONE stone
  --peer    peer reviewer slug to extend (default: the latest level in play)
  --level   review level to extend — reach a LOWER level only when you name it
  --route   path to route directory (default: auto-detect from branch)
  --help    show this help message

.note = the grant is REFUSED by default. the budget is the allowance the route author set with the
        whole rubric in view, so a top-up past it needs a warrant — all three of:
          a live URGENT concession on the stone   a driver names the harm that ships if unfixed
          a target reviewer that has run dry      a pad before the bound bites removes the bound
          a --stone that named one stone          a prefix names many, and one warrant buys one
        where it refuses, it names what to run instead.

.note = this command checks no actor, so a human is refused here exactly as a driver is. the human
        path is a DIFFERENT command: rhx route.mutate grant allow, which mints the privilege flag a
        guard edit needs. ⇒ a human who wants to raise a bound past its warrant grants the
        privilege, then edits the guard's budget field itself.

.note = a bare add lands on the LATEST level alone. a lower level stays exhausted unless it is
        explicitly named with --level or --peer — a top-up is a deliberate, targeted act, never a
        blanket sweep that silently heals a level the route author bounded on purpose.

"
`;

exports[`driver.route.usage-errors.acceptance given: [case3b] route.guard.budget with an absent --for when: [t0] the required --for flag is omitted then: stderr matches snapshot: budget --for absent 1`] = `
"error: --for is required

route.guard.budget - extend peer reviewer budget

usage:
  rhx route.guard.budget --for review --add 2 --stone 1.vision              # extend the LATEST level
  rhx route.guard.budget --for review --add 2 --peer primo --stone 1.vision # extend one reviewer
  rhx route.guard.budget --for review --add 2 --level 1 --stone 1.vision    # extend one named level
  rhx route.guard.budget --for review --add 2 --stone 1.vision --route .behavior/my-feature

options:
  --for     resource type: "review" (required)
  --add     number of budget rounds to add (required)
  --stone   stone name with guard to update (required) — must name exactly ONE stone
  --peer    peer reviewer slug to extend (default: the latest level in play)
  --level   review level to extend — reach a LOWER level only when you name it
  --route   path to route directory (default: auto-detect from branch)
  --help    show this help message

.note = the grant is REFUSED by default. the budget is the allowance the route author set with the
        whole rubric in view, so a top-up past it needs a warrant — all three of:
          a live URGENT concession on the stone   a driver names the harm that ships if unfixed
          a target reviewer that has run dry      a pad before the bound bites removes the bound
          a --stone that named one stone          a prefix names many, and one warrant buys one
        where it refuses, it names what to run instead.

.note = this command checks no actor, so a human is refused here exactly as a driver is. the human
        path is a DIFFERENT command: rhx route.mutate grant allow, which mints the privilege flag a
        guard edit needs. ⇒ a human who wants to raise a bound past its warrant grants the
        privilege, then edits the guard's budget field itself.

.note = a bare add lands on the LATEST level alone. a lower level stays exhausted unless it is
        explicitly named with --level or --peer — a top-up is a deliberate, targeted act, never a
        blanket sweep that silently heals a level the route author bounded on purpose.

"
`;

exports[`driver.route.usage-errors.acceptance given: [case3c] route.guard.budget with an absent --stone when: [t0] the required --stone flag is omitted then: stderr matches snapshot: budget --stone absent 1`] = `
"error: --stone is required

route.guard.budget - extend peer reviewer budget

usage:
  rhx route.guard.budget --for review --add 2 --stone 1.vision              # extend the LATEST level
  rhx route.guard.budget --for review --add 2 --peer primo --stone 1.vision # extend one reviewer
  rhx route.guard.budget --for review --add 2 --level 1 --stone 1.vision    # extend one named level
  rhx route.guard.budget --for review --add 2 --stone 1.vision --route .behavior/my-feature

options:
  --for     resource type: "review" (required)
  --add     number of budget rounds to add (required)
  --stone   stone name with guard to update (required) — must name exactly ONE stone
  --peer    peer reviewer slug to extend (default: the latest level in play)
  --level   review level to extend — reach a LOWER level only when you name it
  --route   path to route directory (default: auto-detect from branch)
  --help    show this help message

.note = the grant is REFUSED by default. the budget is the allowance the route author set with the
        whole rubric in view, so a top-up past it needs a warrant — all three of:
          a live URGENT concession on the stone   a driver names the harm that ships if unfixed
          a target reviewer that has run dry      a pad before the bound bites removes the bound
          a --stone that named one stone          a prefix names many, and one warrant buys one
        where it refuses, it names what to run instead.

.note = this command checks no actor, so a human is refused here exactly as a driver is. the human
        path is a DIFFERENT command: rhx route.mutate grant allow, which mints the privilege flag a
        guard edit needs. ⇒ a human who wants to raise a bound past its warrant grants the
        privilege, then edits the guard's budget field itself.

.note = a bare add lands on the LATEST level alone. a lower level stays exhausted unless it is
        explicitly named with --level or --peer — a top-up is a deliberate, targeted act, never a
        blanket sweep that silently heals a level the route author bounded on purpose.

"
`;

exports[`driver.route.usage-errors.acceptance given: [case3d] route.guard.budget with a wrong-value --for when: [t0] --for carries a value the flag does not accept then: stderr matches snapshot: budget --for wrong value 1`] = `
"error: --for must be "review", got "reveiw"

route.guard.budget - extend peer reviewer budget

usage:
  rhx route.guard.budget --for review --add 2 --stone 1.vision              # extend the LATEST level
  rhx route.guard.budget --for review --add 2 --peer primo --stone 1.vision # extend one reviewer
  rhx route.guard.budget --for review --add 2 --level 1 --stone 1.vision    # extend one named level
  rhx route.guard.budget --for review --add 2 --stone 1.vision --route .behavior/my-feature

options:
  --for     resource type: "review" (required)
  --add     number of budget rounds to add (required)
  --stone   stone name with guard to update (required) — must name exactly ONE stone
  --peer    peer reviewer slug to extend (default: the latest level in play)
  --level   review level to extend — reach a LOWER level only when you name it
  --route   path to route directory (default: auto-detect from branch)
  --help    show this help message

.note = the grant is REFUSED by default. the budget is the allowance the route author set with the
        whole rubric in view, so a top-up past it needs a warrant — all three of:
          a live URGENT concession on the stone   a driver names the harm that ships if unfixed
          a target reviewer that has run dry      a pad before the bound bites removes the bound
          a --stone that named one stone          a prefix names many, and one warrant buys one
        where it refuses, it names what to run instead.

.note = this command checks no actor, so a human is refused here exactly as a driver is. the human
        path is a DIFFERENT command: rhx route.mutate grant allow, which mints the privilege flag a
        guard edit needs. ⇒ a human who wants to raise a bound past its warrant grants the
        privilege, then edits the guard's budget field itself.

.note = a bare add lands on the LATEST level alone. a lower level stays exhausted unless it is
        explicitly named with --level or --peer — a top-up is a deliberate, targeted act, never a
        blanket sweep that silently heals a level the route author bounded on purpose.

"
`;

exports[`driver.route.usage-errors.acceptance given: [case4] route.guard.budget --help when: [t0] --help is asked for, with no other flag then: stdout matches snapshot: budget --help 1`] = `
"route.guard.budget - extend peer reviewer budget

usage:
  rhx route.guard.budget --for review --add 2 --stone 1.vision              # extend the LATEST level
  rhx route.guard.budget --for review --add 2 --peer primo --stone 1.vision # extend one reviewer
  rhx route.guard.budget --for review --add 2 --level 1 --stone 1.vision    # extend one named level
  rhx route.guard.budget --for review --add 2 --stone 1.vision --route .behavior/my-feature

options:
  --for     resource type: "review" (required)
  --add     number of budget rounds to add (required)
  --stone   stone name with guard to update (required) — must name exactly ONE stone
  --peer    peer reviewer slug to extend (default: the latest level in play)
  --level   review level to extend — reach a LOWER level only when you name it
  --route   path to route directory (default: auto-detect from branch)
  --help    show this help message

.note = the grant is REFUSED by default. the budget is the allowance the route author set with the
        whole rubric in view, so a top-up past it needs a warrant — all three of:
          a live URGENT concession on the stone   a driver names the harm that ships if unfixed
          a target reviewer that has run dry      a pad before the bound bites removes the bound
          a --stone that named one stone          a prefix names many, and one warrant buys one
        where it refuses, it names what to run instead.

.note = this command checks no actor, so a human is refused here exactly as a driver is. the human
        path is a DIFFERENT command: rhx route.mutate grant allow, which mints the privilege flag a
        guard edit needs. ⇒ a human who wants to raise a bound past its warrant grants the
        privilege, then edits the guard's budget field itself.

.note = a bare add lands on the LATEST level alone. a lower level stays exhausted unless it is
        explicitly named with --level or --peer — a top-up is a deliberate, targeted act, never a
        blanket sweep that silently heals a level the route author bounded on purpose.
"
`;

exports[`driver.route.usage-errors.acceptance given: [case5] route.mutate grant --help when: [t0] --help rides an action the command would reject then: stdout matches snapshot: mutate grant --help 1`] = `
"route.mutate grant - manage route protection privilege

usage:
  rhx route.mutate grant allow   # grant privilege (human only — refused without a tty)
  rhx route.mutate grant block   # revoke privilege
  rhx route.mutate grant get     # check privilege state

options:
  --route <path>    route path (default: auto-detect from branch)
  --help            show this help message

.note = the flag \`allow\` writes lifts EVERY protected write on the route at once — a guard's
        \`budget:\` line among them. so it is human only, and that is enforced rather than asked.
"
`;

exports[`driver.route.usage-errors.acceptance given: [case6] route.stone.get with --stone omitted when: [t0] --route is passed and --stone is not then: stderr matches snapshot: stone.get --stone absent 1`] = `
"error: BadRequestError: --stone is required

{
  "hint": "--help for usage"
}
"
`;

exports[`driver.route.usage-errors.acceptance given: [case7] route.stone.judge with --mechanism omitted when: [t0] the judge is invoked with no mechanism then: stderr matches snapshot: stone.judge --mechanism absent 1`] = `
"error: BadRequestError: --mechanism is required

{
  "hint": "--help for usage"
}
"
`;

exports[`driver.route.usage-errors.acceptance given: [case7] route.stone.judge with --mechanism omitted when: [t1] the mechanism is named and the stone is not then: stderr matches snapshot: stone.judge --stone absent 1`] = `
"error: BadRequestError: --stone is required

{
  "hint": "--help for usage"
}
"
`;

exports[`driver.route.usage-errors.acceptance given: [case7] route.stone.judge with --mechanism omitted when: [t2] the mechanism names a value the contract does not hold then: stderr matches snapshot: stone.judge unknown mechanism 1`] = `
"error: BadRequestError: unknown mechanism "bogus?"

{
  "hint": "--help for usage"
}
"
`;

exports[`driver.route.usage-errors.acceptance given: [case8] route.stone.set with an --as the contract does not name when: [t0] --as carries a value outside the allowed set then: stderr matches snapshot: stone.set --as invalid 1`] = `
"error: BadRequestError: --as must be "passed", "approved", "promised", "absorbed", "conceded", "disputed", "blocked", "rewound", "arrived", "overruled", or "forced"

{
  "hint": "--help for usage"
}
"
`;

exports[`driver.route.usage-errors.acceptance given: [case9] route.bind.set with --route omitted when: [t0] the bind is invoked with no route then: stderr matches snapshot: bind.set --route absent 1`] = `
"error: BadRequestError: --route is required

{
  "hint": "--help for usage"
}
"
`;

exports[`driver.route.usage-errors.acceptance given: [case10] a bare --into on subcommands that do not own the flag when: [t0] route.bind.get is invoked with a bare --into then: stderr matches snapshot: route.bind.get bare --into 1`] = `
"error: BadRequestError: --into was passed with no value

--into carries a value, so a bare --into says naught.

pass the value it asks for, or drop the flag:
  --into <value>

{
  "flag": "--into"
}
"
`;

exports[`driver.route.usage-errors.acceptance given: [case10] a bare --into on subcommands that do not own the flag when: [t0] route.drive is invoked with a bare --into then: stderr matches snapshot: route.drive bare --into 1`] = `
"error: BadRequestError: --into was passed with no value

--into carries a value, so a bare --into says naught.

pass the value it asks for, or drop the flag:
  --into <value>

{
  "flag": "--into"
}
"
`;

exports[`driver.route.usage-errors.acceptance given: [case10] a bare --into on subcommands that do not own the flag when: [t0] route.guard.upgrade is invoked with a bare --into then: stderr matches snapshot: route.guard.upgrade bare --into 1`] = `
"error: BadRequestError: --into was passed with no value

--into carries a value, so a bare --into says naught.

pass the value it asks for, or drop the flag:
  --into <value>

{
  "flag": "--into"
}
"
`;

exports[`driver.route.usage-errors.acceptance given: [case10] a bare --into on subcommands that do not own the flag when: [t0] route.stone.get is invoked with a bare --into then: stderr matches snapshot: route.stone.get bare --into 1`] = `
"error: BadRequestError: --into was passed with no value

--into carries a value, so a bare --into says naught.

pass the value it asks for, or drop the flag:
  --into <value>

{
  "flag": "--into"
}
"
`;

exports[`driver.route.usage-errors.acceptance given: [case11] route.review with an --open the host does not hold when: [t0] the named opener is absent from PATH then: stderr matches snapshot: route.review absent opener 1`] = `
"🦉 look for the light

🗿 route.review
   └─ ✗ opener 'no-such-opener-abcxyz' not found in PATH
"
`;
